# knowledge-chat

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
app/: langgraph.json  pyproject.toml
app/knowledgechat/: main.py
app/knowledgechat/stategraph/: mygraph.py
app/knowledgechat/stategraph/nodes/: __init__.py
app/knowledgechat/tools/: __init__.py  gmail.py  resume_db.py
notebooks/: database.py  etl.ipynb  extract.ipynb  query.ipynb  query_neo4j.ipynb  resume_etl.ipynb  system.txt
src/knowledgechat/: main.py
src/knowledgechat/stategraph/: __init__.py  mygraph.py  state.py
src/knowledgechat/stategraph/edges/: __init__.py  conditional.py
src/knowledgechat/stategraph/nodes/: __init__.py  basictoolnode.py  mybot.py
src/knowledgechat/tools/: gmail.py
