[project]
name = "knowledge-chat"
version = "0.1.0"
description = ""
authors = [
    {name = "devonho",email = "devonho@symplesys.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12.4,<4.0"
dependencies = [
    "langgraph (>=0.2.74,<0.3.0)",
    "langsmith (>=0.3.8,<0.4.0)",
    "langchain-anthropic (>=0.3.7,<0.4.0)",
    "tavily-python (>=0.5.1,<0.6.0)",
    "langchain-community (>=0.3.18,<0.4.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false